# ferrodun

./: .gitguardian.yaml  .gitignore  .sqruff  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  SPEC.md  mise.toml
.claude/: JOURNAL.md
.zed/: settings.json
crates/mud-db/: Cargo.toml
crates/mud-db/.sqlx/: query-012c3589f82bdfe443faddf179efa36f14523b3fc6d33ff8cb7525f38becb24e.json  query-01875af0352487dd02005f53aa7f31110902ed5b8fdf70cc061b545ddec5be5c.json  query-0dc0aa040dc2544948c112fad05b757760ded18b2a49204a494df211cbe2c92d.json  query-1aca715f4724696662721df922969e8b88cc0be14dac0757d0e0105a7bf7d34d.json  query-2c51b1afdaa64f33c5bffa51813c3b997796ff2b95b0b85838a992c6d4f195b0.json  query-33a740acda0e36d96b783e546e3e76cf9d99e3c91a60e3e51a0c5de1fc634ef3.json  query-56dcc6e0cb95a784a0c70158bd0f83ae43d7e802bd3d4b8bbbca2e9158056b34.json  query-59d738c5f63866c9cb11876270fe5a6788afdcc48058692922f990a9229c5e27.json  query-6c23621c99481e50bcc42069db7e311d83de977db7aa6deae0af5c45628e47b2.json  query-75e4c4dc961aa494b16425685536704dac66e1e63302dcf890a02a66f8707e4d.json  query-8999c0f366de8bafc2aa88c187e87ab511b4aa33bf2dd173e26c6916ff598a70.json  query-8a38f80160304176483c606df927ff383a0197a831117f7c7e0384b8b40834d6.json  query-a5c98cfc3ac961b7261fbf156163f8d9a43dc7d54594a3904167931e3a5d76b7.json  query-ba84bc5d660021a7fff2a31d4e8ec68de263badce42a494a3244a93a1306dce0.json  query-ba919085072f43e90e8bbc2ea45800a27d4e5a515d9c632b98971b9ffc438900.json  query-c2694c29ea26aa40db19e5e7fc0473b9c9081ba7eb5c7641bb90785e550f04a9.json  query-d7afa442416525e3aff1e251b73809c37bbeba09f9432408539e7cecc2e81214.json  query-de716ad2b39c1f508cf35c8ba6e3df30e39507f3840dcf1ad4466080636b5cf0.json  query-f35b25f667917d186e8f8c9c14964a604757f9e8446031e2aed4061d76ccf1e3.json  query-fc8c10aee75596e564939f71e20e9181aad4802d6c9e7220aa35a0d89cb1a5e2.json  query-fd29d0e2ab0fd3debadb89ea810cd5834068df384265764f0db90d65165d804e.json
crates/mud-db/migrations/sqlite/: 0001_initial.sql
crates/mud-db/src/: error.rs  lib.rs
crates/mud-db/src/sqlite/: accounts.rs  keys.rs  mod.rs  persistent_world.rs  place_map.rs  write_through.rs
crates/mud-db/tests/: accounts.rs  restart.rs
crates/mud-engine/: Cargo.toml
crates/mud-engine/src/: builtins.rs  caller.rs  command_id.rs  dispatch.rs  layers.rs  lib.rs  objects.rs  pipeline.rs  places.rs  presence.rs  roster.rs  text.rs
crates/mud-engine/src/builtins/: items.rs  look.rs  mod.rs  movement.rs  say.rs  session.rs
crates/mud-engine/src/session/: mod.rs  render.rs  resolver.rs
crates/mud-engine/tests/: broadcast.rs  builtins.rs  command_pipeline.rs  session_login.rs
crates/mud-gateway/: Cargo.toml
crates/mud-gateway/src/: config.rs  connection.rs  error.rs  lib.rs  router.rs  session.rs
crates/mud-gateway/tests/: loopback.rs
crates/mud-ipc/: Cargo.toml
crates/mud-ipc/src/: error.rs  handshake.rs  lib.rs  transport.rs
crates/mud-ipc/tests/: transport.rs
crates/mud-schema/: Cargo.toml
crates/mud-schema/src/: codec.rs  frame.rs  lib.rs  session.rs
crates/mud-world/: Cargo.toml
crates/mud-world/src/: archetype.rs  banner.rs  config.rs  error.rs  kdl.rs  lib.rs  palette.rs  regions.rs  rooms.rs
crates/mud-world/tests/: load_world.rs
crates/mud-world/tests/fixtures/tenant/: config.toml  welcome.kdl
crates/mud-world/tests/fixtures/tenant/world/keep/: cellar.kdl  region.kdl
crates/mud-world/tests/fixtures/tenant/world/town/: region.kdl  town.kdl
crates/mudd/: Cargo.toml
crates/mudd/src/: backend.rs  boot.rs  catalog.rs  config.rs  lib.rs  main.rs  places.rs  scaffold.rs  tenant.rs  world_loop.rs
crates/mudd/tests/: presence.rs  telnet_login.rs
crates/mudd/tests/common/: mod.rs
docs/: mkdocs.yml  pyproject.toml
docs/docs/: index.md  running-a-server.md
docs/docs/architecture/: engine.md  i18n.md  index.md  rendering.md  sessions.md
docs/docs/building/: localization.md  regions.md  rooms.md  styling.md  world-files.md
docs/docs/operating/: configuration.md  logging.md  running-a-server.md
docs/docs/playing/: commands.md  getting-started.md
docs/superpowers/plans/: 2026-07-01-m1-19-session-fsm.md  2026-07-02-i18n-per-world-locale.md  2026-07-02-m1-19a-session-dependent-builtins.md  2026-07-02-m1-20-telnet-core.md  2026-07-02-m1-21-mud-gateway.md  2026-07-04-m1-22-mudd-wiring.md  2026-07-05-mud-account-coverage.md  2026-07-05-mud-cmd-merge-consolidation.md  2026-07-05-mud-core-scheduler-write-model.md  2026-07-05-mud-db-error-axes-and-hardening.md  2026-07-05-mud-engine-builtins-module.md  2026-07-05-mud-gateway-router-backpressure-and-isolation.md  2026-07-05-mud-i18n-catalog-guard-and-public-api.md  2026-07-05-mud-ipc-handshake-and-frame-error-coverage.md  2026-07-05-mud-net-doc-and-boundary-types.md  2026-07-05-mud-schema-golden-bytes.md  2026-07-05-mud-session-login-flow-tests.md  2026-07-05-mud-world-kdl-helper.md  2026-07-07-direction-name-consolidation.md  2026-07-08-logging-instrumentation.md  2026-07-09-docs-refactor.md  2026-07-11-command-pipeline-i18n-templates.md  2026-07-11-tenant-catalog-cli.md  2026-07-13-password-echo-suppression.md  2026-07-14-ansi-renderer-wiring.md  2026-07-15-room-presence.md  2026-07-16-telnet-line-discipline.md  2026-07-17-mud-db-internal-error-conversions.md  2026-07-17-play-name-resolution.md
docs/superpowers/specs/: 2026-07-01-m1-19-session-fsm-design.md  2026-07-02-i18n-per-world-locale-design.md  2026-07-02-m1-19a-session-dependent-builtins-design.md  2026-07-02-m1-20-telnet-core-design.md  2026-07-02-m1-21-mud-gateway-design.md  2026-07-03-m1-22-mudd-wiring-design.md  2026-07-07-direction-name-consolidation-design.md  2026-07-08-logging-strategy-design.md  2026-07-09-docs-refactor-design.md  2026-07-11-command-pipeline-i18n-templates-design.md  2026-07-11-password-echo-suppression-design.md  2026-07-11-tenant-catalog-cli-design.md  2026-07-14-ansi-renderer-wiring-design.md  2026-07-15-room-presence-design.md  2026-07-16-telnet-line-discipline-design.md  2026-07-17-mud-db-internal-error-conversions-design.md  2026-07-17-play-name-resolution-design.md
next/: 404.html  index.html  (+1 more)
(+98 files in other folders)
