[workspace]
resolver = "3"
members = ["crates/mud-core", "crates/mud-db", "crates/mud-schema", "crates/mudd"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.clippy]
all = { level = "deny" }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
cast_possible_truncation = "deny"
print_stdout = "deny"
print_stderr = "deny"
