[project]
name = "ferrodun-docs"
version = "0"
description = "Ferrodun documentation site toolchain (MkDocs + Material + mike)."
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material==9.7.6",
    "mike==2.2.0",
]

# Not a distributable package — just a pinned environment for building docs.
[tool.uv]
package = false
