[package]
name = "mud-db"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = { version = "0.9.0", default-features = false, features = ["sqlite", "runtime-tokio", "migrate", "macros"] }
thiserror = "2.0.18"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
