[package]
name = "mud-db"
version.workspace = true
edition.workspace = true

[dependencies]
mud-account = { version = "0.1.0", path = "../mud-account" }
mud-core = { version = "0.1.0", path = "../mud-core" }
sqlx = { version = "0.9.0", default-features = false, features = ["sqlite", "runtime-tokio", "migrate", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.47", features = ["rt"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
