[package]
name = "mud-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
mud-ipc = { version = "0.1.0", path = "../mud-ipc" }
mud-net = { version = "0.1.0", path = "../mud-net" }
mud-schema = { version = "0.1.0", path = "../mud-schema" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["sync", "rt-multi-thread", "tracing"] }
tracing = "0.1.44"

[lints]
workspace = true
