[package]
name = "mud-ipc"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = "1.12.0"
futures-util = { version = "0.3.32", default-features = false, features = ["sink"] }
mud-schema = { version = "0.1.0", path = "../mud-schema" }
serde = "1.0.228"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["net", "io-util", "sync", "rt", "macros"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }
tracing-test = "0.2.6"
