[package]
name = "mud-schema"
version.workspace = true
edition.workspace = true

[dependencies]
mud-core = { version = "0.1.0", path = "../mud-core" }
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[lints]
workspace = true
